test fix for white line overflow

--- a/css/shanti-main-images.css
+++ b/css/shanti-main-images.css
@@ -234,7 +234,7 @@ ul.pager{ margin: 0 0 0.5rem;}
   padding: 0 1rem 0 2rem;
   width: 43%;
   float:left;
-  margin:0;
+  margin:0 0 0 -2px;
   -webkit-transition: margin .3s ease-out;
   transition: margin .3s ease-out;
 }
